# RL-project

./: .gitignore  README.md  pyproject.toml  q_table.pkl
.pytest_tmp/test_eval_cli_baseline_writes_0/eval_baseline/: eval_metrics.json
.pytest_tmp/test_train_eval_and_play_smoke0/eval/: eval_metrics.json
.pytest_tmp/test_train_eval_and_play_smoke0/train/: model.pkl  train_metrics.json
configs/: bitmask_value_iteration.yaml  default.yaml  policy_iteration_obs.yaml  q_learning.yaml  sarsa.yaml  tvs_eval.yaml
scripts/: analyze_tvs_robustness.py  eval.py  evaluate_all_tvs.py  evaluate_tvs.py  play.py  q_obs_learning_agent_copy.py  q_table_learning_agent.py  train.py
src/pacman_rldp/: __init__.py  logging.py  pipelines_food_bitmask_vi.py  pipelines_tabular_q.py
src/pacman_rldp/agents/: __init__.py  base.py  baseline.py  obs_policy.py  policies.py  sarsa.py
src/pacman_rldp/algorithms/: __init__.py  food_bitmask_value_iteration.py  mdp.py  pacman_adapter.py
src/pacman_rldp/diversity/: __init__.py  policies.py  rollouts.py  temporal_vendi.py
src/pacman_rldp/env/: __init__.py  observations.py  pacman_env.py
src/pacman_rldp/utils/: __init__.py  config.py
src/pacman_rldp/visuals/: __init__.py  capture.py  manual.py
tests/: conftest.py  test_algorithm_correctness.py  test_baseline_policy.py  test_cli_smoke.py  test_env_contract.py  test_eval_baseline_protocol.py  test_ghost_loop_policy.py  test_ghost_markovian_policy.py  test_manual_policy_wiring.py  test_mdp_adapter.py  test_observations.py  test_temporal_vendi.py  test_visual_capture.py
(+5 files in other folders)
